investing connector